--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -2,7 +2,7 @@ $primary-color: #F8C33C;
 $secondary-color: #9B00D1;
 $intermidiate-color: #F0CEC4;
 $validation-color: #BF0404;
-$background-color: #E5E5E5;
+$general-background-color: #F7F7F7;
 $for-background-contrast-color:#212123;
 $active-background-color: #F7F7F7;
 
